fix cutoff descenders and massage position of overview variations illustrations

--- a/_sass/specimens.scss
+++ b/_sass/specimens.scss
@@ -18,6 +18,11 @@
         padding: 0;
     }
     
+    a.linked-specimen:hover {
+        color: inherit;
+        text-decoration: none;
+    }
+    
     &.compact {
         padding: 0;
         margin-top: 0;
